[gd_scene load_steps=17 format=3 uid="uid://c8bxs8fhbrwli"]

[ext_resource type="Texture2D" uid="uid://cah0r2miipm7p" path="res://scenes/Items/MotivationBooster/assets/coffee.png" id="1_gnrwx"]
[ext_resource type="Script" uid="uid://ctnsxhlhpw1y" path="res://scenes/Items/MotivationBooster/scripts/motivation_booster.gd" id="1_nff07"]
[ext_resource type="Texture2D" uid="uid://78k0pkuqrdu2" path="res://scenes/Items/MotivationBooster/assets/energy-drink.png" id="3_66d1o"]
[ext_resource type="AudioStream" uid="uid://b4tgjcp63suoi" path="res://scenes/Items/MotivationBooster/assets/collect_booster.wav" id="4_3xoow"]
[ext_resource type="FontFile" uid="uid://c6juvcku4b4xx" path="res://assets/m5x7.ttf" id="5_0ktmo"]

[sub_resource type="AtlasTexture" id="AtlasTexture_nff07"]
atlas = ExtResource("1_gnrwx")
region = Rect2(0, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_66d1o"]
atlas = ExtResource("1_gnrwx")
region = Rect2(32, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_3xoow"]
atlas = ExtResource("1_gnrwx")
region = Rect2(64, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_0ktmo"]
atlas = ExtResource("1_gnrwx")
region = Rect2(96, 0, 32, 32)

[sub_resource type="AtlasTexture" id="AtlasTexture_prgw1"]
atlas = ExtResource("3_66d1o")
region = Rect2(0, 0, 32, 32)

[sub_resource type="SpriteFrames" id="SpriteFrames_prgw1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nff07")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_66d1o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_3xoow")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0ktmo")
}],
"loop": true,
"name": &"coffee",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_prgw1")
}],
"loop": true,
"name": &"energy_drink",
"speed": 5.0
}]

[sub_resource type="CircleShape2D" id="CircleShape2D_3bdk4"]
radius = 15.0333

[sub_resource type="Animation" id="Animation_3xoow"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("PopupText:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("AnimatedSprite2D:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("PopupText:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-12, -6)]
}

[sub_resource type="Animation" id="Animation_66d1o"]
resource_name = "bounce"
length = 0.8
loop_mode = 1
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("AnimatedSprite2D:offset")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4, 0.6),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 1,
"values": [Vector2(0, 0), Vector2(0, 1), Vector2(0, 2), Vector2(0, 1)]
}

[sub_resource type="Animation" id="Animation_0ktmo"]
resource_name = "collect"
length = 0.5
step = 0.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("PopupText:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("AnimatedSprite2D:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("PopupText:position")
tracks/2/interp = 2
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-12, -6), Vector2(-12, -15)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_0ktmo"]
_data = {
&"RESET": SubResource("Animation_3xoow"),
&"bounce": SubResource("Animation_66d1o"),
&"collect": SubResource("Animation_0ktmo")
}

[node name="MotivationBooster" type="Area2D" node_paths=PackedStringArray("collect_sfx")]
scale = Vector2(0.7, 0.7)
script = ExtResource("1_nff07")
booster_type = "coffee"
collect_sfx = NodePath("SfxCollect")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
sprite_frames = SubResource("SpriteFrames_prgw1")
animation = &"energy_drink"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_3bdk4")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_0ktmo")
}
autoplay = "bounce"

[node name="SfxCollect" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_3xoow")
bus = &"SFX"

[node name="PopupText" type="Label" parent="."]
visible = false
offset_left = -12.0
offset_top = -6.0
offset_right = 28.0
offset_bottom = 17.0
theme_override_colors/font_color = Color(4.81307e-07, 0.587142, 0, 1)
theme_override_colors/font_outline_color = Color(1, 1, 1, 1)
theme_override_constants/outline_size = 3
theme_override_constants/shadow_outline_size = 5
theme_override_fonts/font = ExtResource("5_0ktmo")
theme_override_font_sizes/font_size = 14
text = "+ 12"

[connection signal="body_entered" from="." to="." method="_on_body_entered"]
[connection signal="finished" from="SfxCollect" to="." method="_on_sfx_collect_finished"]
